--- a/css/styles.css
+++ b/css/styles.css
@@ -104,20 +104,18 @@ body{
     color: var(--green);
 }
 /* Player */
-.player-container{
-    display: flex;
-    justify-content: center;
-    align-items: center;
-}
+
 /* PLayer */
 .player{
-    height: auto;
+    position: relative;
+    width: 384px;
+    height: 62vh;
     margin: 0 3rem;
-    padding: 1.9rem 2rem;
+    padding: 1.9rem;
+    margin: auto;
     background:linear-gradient(var(--blue), var(--dark));
     border-radius: 1rem;
     box-shadow: 0px 0px 10px rgba(48, 172, 108,.9);
-    
 }
 /* Title */
 .title{
@@ -179,7 +177,6 @@ body{
     border:.6rem solid var(--green);
     border-radius: 50%;
     transition: all 1s;
-
 }
 .controls i:hover{
     color: var(--green-hover);
@@ -194,13 +191,46 @@ body{
 
 /* Songs */
 .songs{
-    padding: 0;
-    margin: 0;
-    list-style: none;
-    /* Ocultar Canciones */
-    display: none;
+    display: flex;
+    flex-flow:column;
+    position: absolute;
+    background: linear-gradient(45deg, var(--blue), var(--blue-hover));
+    overflow: auto;
+    width: 384px;
+    height: 48vh;
+    left: 0;
+    top: -3%;
+    box-shadow: 5px 5px 5px black;
     opacity: 0;
-    transition: all 1s;
+    pointer-events: none;
+    z-index: 100;
+    padding: 15px 30px;
+    border-radius: 15px;
+    box-shadow: 0px -5px 10px rgba(0,0,0,0.1);
+    transition: all 400ms ease-out;
+}
+.songs::-webkit-scrollbar {
+    -webkit-appearance: none;
+}
+.show{
+    top: -1rem;
+    opacity: 1;
+    pointer-events: auto;
+}
+.songs .close-container{
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    color: var(--white);
+    transition: all 600ms;
+}
+.songs #close{
+    font-size: 1.4rem;
+    padding: 1rem;
+}
+.songs #close:hover{
+    cursor: pointer;
+    color: var(--green);
 }
 .songs li{
     display: flex;
@@ -210,6 +240,7 @@ body{
 }
 .songs a{
     color: var(--white);
+    width: 100%;
     text-decoration: none;
     transition: all 500ms;
 }
@@ -224,9 +255,5 @@ body{
  @media (max-width:768px) {
     .header{
         padding: .6rem 1rem;
-    }
-    .player{
-        padding: 1.3rem .5rem;
-        margin: 0;
     }
 }
